# vosk.c

./: .gitignore  CMakeLists.txt  main.c  readme.md
